2_Template_Securite.yaml
##########################################################
#                 TEMPLATE SECURITE                      #
##########################################################
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Template Sécurité

Resources:

#########################################################   
#         GROUPE DE SECURITE DU LOAD BALANCER           #
#########################################################
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: LoadBalancer Security group 
      SecurityGroupEgress:
        # L'instance est autorisée à joindre toutes les adresses avec tous les protocoles
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        # Autoriser toutes les adresses a se connecter sur cette instance en http
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80   
      VpcId: !ImportValue
        Fn::Sub: VPC
      Tags:
        - Key: Name
          Value: LoadBalancer-SecurityGroup

#########################################################   
#         GROUPE DE SECURITE DE LA LAUNCHCONFIG           #
#########################################################
  LaunchConfigSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: LaunchConfig Security group 
      SecurityGroupEgress:
        # L'instance est autorisée à joindre toutes les adresses avec tous les protocoles
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        # Autoriser toutes les adresses a se connecter sur cette instance en http 
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
        # Autoriser l'administrateur à se connecter avec putty sur l'instance en ssh
        - IpProtocol: tcp
          CidrIp: 109.19.59.102/24
          FromPort: 22
          ToPort: 22  
      VpcId: !ImportValue
        Fn::Sub: VPC
      Tags:
        - Key: Name
          Value: LaunchConfig-SecurityGroup

#########################################################   
#         GROUPE DE SECURITE DES INSTANCES RDS          #
#########################################################
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS Security Group
      GroupName: RDS Security Group
      SecurityGroupEgress:
        # L'instance est autorisée à joindre toutes les adresses avec tous les protocoles
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        # Le réseau principal est autorisé à joindre la base de données MySql de l'instance
        - CidrIp: 10.0.0.0/16
          IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306 
      VpcId: !ImportValue
        Fn::Sub: VPC
      Tags:
        - Key: Name
          Value: RDS-SecurityGroup

#########################################################   
#  GROUPE DE SECURITE DE L'INSTANCE DU SERVEUR INTRANET #
#########################################################
  IntranetSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Groupe de securite Intranet
        GroupName: Groupe de securite Intranet
        SecurityGroupEgress:
          # L'instance est autorisée à joindre toutes les adresses avec tous les protocoles
          - IpProtocol: -1
            CidrIp: 0.0.0.0/0
        SecurityGroupIngress:
          # Autoriser le serveur de fichier onpremise à mapper un partage sur l'instance
          - IpProtocol: tcp
            CidrIp: 192.168.50.50/24
            FromPort: 2049
            ToPort: 2049
          # Autoriser toutes les adresses a se connecter sur cette instance en http
          - IpProtocol: tcp
            CidrIp: 10.0.50.0/24
            FromPort: 80
            ToPort: 80
          # Autoriser l'administrateur à se connecter avec putty sur l'instance en ssh
          - IpProtocol: tcp
            CidrIp: 10.0.50.0/24
            FromPort: 22
            ToPort: 22
          # Autoriser le reseau de l'entreprise et le reseau privé c à ping l'instance
          - IpProtocol: icmp
            FromPort: -1
            ToPort: -1
            CidrIp: 10.0.50.0/24
        VpcId: !ImportValue
          Fn::Sub: VPC
        Tags:
          - Key: Name
            Value: IntranetSecurityGroup

#############################################################
#   GROUPE DE SECURITE DE L'INSTANCE DE LA PASSERELLE VPN   #
#############################################################
  PasserelleVPNSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: groupe de securite VPN
        GroupName: Groupe de securite VPN
        SecurityGroupEgress:
          # L'instance est autorisée à joindre toutes les adresses avec tous les protocoles
          - IpProtocol: -1
            CidrIp: 0.0.0.0/0          
        SecurityGroupIngress:
          # Autoriser l'intranet à entrer pour le partage de l'intranet 
          - IpProtocol: tcp
            CidrIp: 10.0.50.0/24
            FromPort: 2049
            ToPort: 2049
          # Autoriser l'adresse publique du site de l'entreprise a se connecter pour etablir la connexion VPN
          - IpProtocol: udp
            CidrIp: 109.19.59.0/24
            FromPort: 1194
            ToPort: 1194
          # Autoriser l'administrateur à se connecter avec putty sur l'instance en ssh
          - IpProtocol: tcp
            CidrIp: 10.0.50.0/24
            FromPort: 22
            ToPort: 22
          - IpProtocol: tcp
            CidrIp: 109.19.59.0/24
            FromPort: 22
            ToPort: 22
          # Autoriser le sous-reseau privé C à ping l'instance
          - IpProtocol: icmp
            FromPort: -1
            ToPort: -1
            CidrIp: 10.0.50.0/24
        VpcId: !ImportValue
          Fn::Sub: VPC
        Tags:
          - Key: Name
            Value: PasserelleVPNSecurityGroup

#######################################
#       NACL DU RESEAU PRINCIPAL      #
#######################################
  VPCNACL:
    Type: AWS::EC2::NetworkAcl
    Properties:
      VpcId: !ImportValue
        Fn::Sub: VPC
      Tags:
        - Key: Name
          Value: VPCNACL 

# Autorise tout trafic sortant depuis le réseau principal vers l'exterieur
  OutboundRule50:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      RuleNumber: 50
      Protocol: -1
      Egress: true
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      NetworkAclId: !Ref VPCNACL 

# Autorise le trafic du vpn à entrer sur le reseau principal à partir de l'adresse ip publique du réseau d'entreprise 
  InboundRule101:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      RuleNumber: 101
      Protocol: 17
      RuleAction: allow
      CidrBlock: 109.19.59.0/24
      PortRange:
        From: 0
        To: 65535
      NetworkAclId: !Ref VPCNACL 

# Autorise le trafic http à entrer sur le reseau principal à partir de toutes les adresses IPV4 de l'extérieur
  InboundRule102:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      RuleNumber: 102
      Protocol: 17
      RuleAction: allow
      CidrBlock: 10.0.50.0/24
      PortRange:
        From: 0
        To: 65535
      NetworkAclId: !Ref VPCNACL 

# Autorise le trafic de retour entrant sur le reseau principal depuis l'exterieur (pour les demandes provenant de l'intérieur du réseau principal).
  InboundRule103:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      RuleNumber: 103
      Protocol: 6
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 1024
        To: 65535
      NetworkAclId: !Ref VPCNACL 

# Autorise le trafic HTTP entrant sur le reseau principal à partir de toutes les adresses ip ipv4
  InboundRule104:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      RuleNumber: 104
      Protocol: 6
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 80
        To: 80
      NetworkAclId: !Ref VPCNACL 

# Autorise le trafic SSH entrant à partir de la plage d'adresses IPv4 publiques du réseau d'entreprise (via la passerelle Internet).
  InboundRule105:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      RuleNumber: 105
      Protocol: 6
      RuleAction: allow
      CidrBlock: 109.19.59.0/24
      PortRange:
        From: 22
        To: 22
      NetworkAclId: !Ref VPCNACL

# Autorise le trafic HTTPS entrant sur le reseau principal à partir de toutes les adresses ip ipv4
  InboundRule106:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      RuleNumber: 106
      Protocol: 6
      RuleAction: allow
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: 443
        To: 443
      NetworkAclId: !Ref VPCNACL 

#######################################################################
#  ASSOCIER LES SOUS RESEAUX PUBLIC AVEC LE NACL DU RESEAU PRINCIPAL  #
#######################################################################
  PublicAAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties: 
      NetworkAclId: !Ref VPCNACL 
      SubnetId: !ImportValue 
        Fn::Sub: SubnetPublicA
  PublicBAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties: 
      NetworkAclId: !Ref VPCNACL 
      SubnetId: !ImportValue 
        Fn::Sub: SubnetPublicB
  PublicCAssociation:
    Type: AWS::EC2::SubnetNetworkAclAssociation
    Properties: 
      NetworkAclId: !Ref VPCNACL 
      SubnetId: !ImportValue 
        Fn::Sub: SubnetPublicC

#################################################
#                    EXPORTS                    #
#################################################
Outputs:

  RDSSecurityGroup:
    Description: RDS Security Group
    Value: !Ref RDSSecurityGroup
    Export:
      Name: RDSSecurityGroup

  LoadBalancerSecurityGroup:
    Description: LoadBalancer Security group
    Value: !Ref LoadBalancerSecurityGroup
    Export:
      Name: LoadBalancerSecurityGroup

  LaunchConfigSecurityGroup:
    Description: LaunchConfig Security group
    Value: !Ref LaunchConfigSecurityGroup
    Export:
      Name: LaunchConfigSecurityGroup

  IntranetSecurityGroup:
    Description: Intranet Security group
    Value: !Ref IntranetSecurityGroup
    Export:
      Name: IntranetSecurityGroup

  PasserelleVPNSecurityGroup:
    Description: PasserelleVPN Security group
    Value: !Ref PasserelleVPNSecurityGroup
    Export:
      Name: PasserelleVPNSecurityGroup
